# strudel-ai

./: Cargo.toml  README.md
src/: cli.rs  main.rs  player.rs
src/llm/: cerebras.rs  cohere.rs  mod.rs
