[package]
name = "strudel-ai"
version = "0.1.0"
edition = "2021"
description = "AI-powered CLI music generator using Cerebras or Cohere LLMs"

[[bin]]
name = "Strudel-Ai"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
indicatif = "0.17"
colored = "2"
